feat: establish author-content structure with engagement and access control
- Added Author and Content schemas, with controllers and middleware
- Enabled user engagement actions (like, comment, share, repost)
- Restricted content creation to verified users and authors

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "better-comments.highlightPlainText": true,
     "cSpell.words": [
         "learnspace",
+        "repost",
+        "reposts",
         "resave"
     ]
 }
